--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <h1>حاسبة المؤهلة والمعدل الجامعي</h1>
+            <h1>حاسبة المركبة</h1>
             <label for="moahla">المؤهلة:</label>
             <input type="number" id="moahla" name="moahla" step="0.01" min="80" max="100" required>
 
@@ -31,3 +31,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
